fix: adjust alignment for project header row
refs #48

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -247,7 +247,11 @@ button {
 .project-header-row {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
+}
+
+.project-header-row .project-date {
+    margin: 0px;
 }
 
 .project-date {
